--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -1,3 +1,20 @@
+---
+title: MRKL
+---
+
+Example inspired from the [LangChain doc](https://python.langchain.com/docs/modules/agents/how_to/mrkl)
+
+## Prerequisites
+
+This example has extra dependencies. You can install them with:
+
+```bash
+pip install chainlit langchain openai google-search-results
+```
+
+## Code
+
+```python mrkl.py
 import os
 from typing import List
 
@@ -129,3 +146,14 @@ cb = cl.AsyncLangchainCallbackHandler()
             answer += "\nNo sources found"
 
     await cl.Message(content=answer, elements=text_elements).send()
+```
+
+## Try it out
+
+```bash
+chainlit run mrkl.py
+```
+
+You can ask questions like `What is the Paris weather forecast for tomorrow? How does it compare to today's?`.
+
+![QA](/images/mrkl.png)
