add the plotly element

--- a/api-reference/elements/pyplot.mdx
+++ b/api-reference/elements/pyplot.mdx
@@ -4,6 +4,8 @@ title: "Pyplot"
 
 The `Pyplot` class allows you to display a Matplotlib pyplot chart in the chatbot UI. This class takes a pyplot figure.
 
+The difference of between this element and the `Plotly` element is that the user is shown a static image of the chart when using `Pyplot`.
+
 ### Attributes
 
 <ParamField path="name" type="str">
