add on_chat_resume doc

--- a/api-reference/on-message.mdx
+++ b/api-reference/on-message.mdx
@@ -2,7 +2,7 @@
 title: "on_message"
 ---
 
-Framework agnostic decorator to react to messages coming from the UI.
+Decorator to react to messages coming from the UI.
 The decorated function is called every time a new message is received.
 
 ### Parameters
