--- a/chat-data/history.mdx
+++ b/chat-data/history.mdx
@@ -14,3 +14,11 @@ To enable chat history, you need to enable:
 <Frame caption="Chat History">
   <img src="/images/history.gif" />
 </Frame>
+
+## Resume a conversation
+
+To let users continue persisted conversations, use [cl.on_chat_resume](/api-reference/on-chat-resume).
+
+<Frame caption="Resuming a conversation">
+  <img src="/images/chat-resume.gif" />
+</Frame>
