--- a/chat-experience/streaming/python.mdx
+++ b/chat-experience/streaming/python.mdx
@@ -4,56 +4,17 @@ title: Python Streaming
 
 Chainlit supports streaming with any Python code. Here is an example with `openai`.
 
-## OpenAI Completion
-
-````python Code Example
-import openai
-import chainlit as cl
-
-openai.api_key = "YOUR_API_KEY"
-
-model_name = "text-davinci-003"
-
-settings = {
-    "temperature": 0.7,
-    "max_tokens": 500,
-    "top_p": 1,
-    "frequency_penalty": 0,
-    "presence_penalty": 0,
-    "stop": ["```"],
-}
-
-prompt = """Answer the following question:
-{question}
-"""
-
-
-@cl.on_message
-async def main(message: cl.Message):
-    fromatted_prompt = prompt.format(question=message.content)
-    msg = cl.Message(
-        content="",
-    )
-
-    async for stream_resp in await openai.Completion.acreate(
-        model=model_name, prompt=fromatted_prompt, stream=True, **settings
-    ):
-        token = stream_resp.get("choices")[0].get("text")
-        await msg.stream_token(token)
-
-    await msg.send()
-````
-
 ## OpenAI Chat Completion
 
 ```python Code Example
-import openai
+from openai import AsyncOpenAI
 import chainlit as cl
 
-openai.api_key = "YOUR_API_KEY"
+client = AsyncOpenAI(api_key="YOUR_OPENAI_API_KEY")
 
-model_name = "gpt-3.5-turbo"
+
 settings = {
+    "model": "gpt-3.5-turbo",
     "temperature": 0.7,
     "max_tokens": 500,
     "top_p": 1,
@@ -77,12 +38,58 @@ async def main(message: cl.Message):
 
     msg = cl.Message(content="")
 
-    async for stream_resp in await openai.ChatCompletion.acreate(
-        model=model_name, messages=message_history, stream=True, **settings
-    ):
-        token = stream_resp.choices[0]["delta"].get("content", "")
-        await msg.stream_token(token)
+    stream = await client.chat.completions.create(
+        messages=message_history, stream=True, **settings
+    )
+
+    async for part in stream:
+        if token := part.choices[0].delta.content or "":
+            await msg.stream_token(token)
 
     message_history.append({"role": "assistant", "content": msg.content})
     await msg.send()
 ```
+
+## OpenAI Completion
+
+````python Code Example
+from openai import AsyncOpenAI
+import chainlit as cl
+
+client = AsyncOpenAI(api_key="YOUR_OPENAI_API_KEY")
+
+
+settings = {
+    "model": "text-davinci-003",
+    "temperature": 0.7,
+    "max_tokens": 500,
+    "top_p": 1,
+    "frequency_penalty": 0,
+    "presence_penalty": 0,
+    "stop": ["```"],
+}
+
+prompt = """Answer the following question:
+{question}
+"""
+
+
+@cl.on_message
+async def main(message: cl.Message):
+    fromatted_prompt = prompt.format(question=message.content)
+    msg = cl.Message(
+        content="",
+    )
+
+    stream = await client.completions.create(
+        prompt=fromatted_prompt,
+        stream=True,
+        **settings,
+    )
+
+    async for part in stream:
+        if token := part.choices[0].text or "":
+            await msg.stream_token(token)
+
+    await msg.send()
+````
