--- a/observability-iteration/prompt-playground/formatted-prompts.mdx
+++ b/observability-iteration/prompt-playground/formatted-prompts.mdx
@@ -30,10 +30,12 @@ Skipping the definition of a template and its variables makes it easier to integ
 Here is an example of code without the template/variables definitions:
 
 ```python
-import openai
+from openai import AsyncOpenAI
 import chainlit as cl
 from chainlit.prompt import Prompt, PromptMessage
 from chainlit.playground.providers import ChatOpenAI
+
+client = AsyncOpenAI(api_key="YOUR_OPENAI_API_KEY")
 
 template = "Hello, {name}!"
 inputs = {"name": "John"}
@@ -60,11 +62,11 @@ async def start():
     )
 
     # Make the call to OpenAI
-    response = await openai.ChatCompletion.acreate(
+    response = await client.chat.completions.create(
         messages=[m.to_openai() for m in prompt.messages], **settings
     )
 
-    prompt.completion = response.choices[0]["message"]["content"]
+    prompt.completion = response.choices[0].message.content
 
     await cl.Message(
         content=prompt.completion,
