add comment on doc

--- a/chat-data/feedback.mdx
+++ b/chat-data/feedback.mdx
@@ -3,7 +3,11 @@ title: Human Feedback
 ---
 
 Human feedback is a crucial part of developing your LLM app or agent.
-It allows your users to provide direct feedback on the interaction, which can be used to improve the performance and accuracy of your system. By enabling data persistence, each message sent by your application will be accompanied by thumbs up and thumbs down icons.
+It allows your users to provide direct feedback on the interaction, which can be used to improve the performance and accuracy of your system. By enabling data persistence, each message sent by your application will be accompanied by thumbs up and thumbs down icons. Users can also add a text comment to their feedback for more detailed input.
+
+<Frame caption="Feedback with comment">
+  <img src="/images/feedback.jpeg" />
+</Frame>
 
 ## Benefits
 
