--- a/chat-experience/multi-modal.mdx
+++ b/chat-experience/multi-modal.mdx
@@ -2,7 +2,11 @@
 title: "Multi-Modal Functionality"
 ---
 
-The term 'Multi-Modal' refers to the ability to support more than just text, encompassing images, videos, and files. Within the Chainlit application, users have the flexibility to attach any file to their messages. This can be achieved either by utilizing the drag and drop feature or by clicking on the `+` button located in the chat bar.
+The term 'Multi-Modal' refers to the ability to support more than just text, encompassing images, videos, and files. Within the Chainlit application, users have the flexibility to attach any file to their messages. This can be achieved either by utilizing the drag and drop feature or by clicking on the `attach` button located in the chat bar.
+
+<Frame caption="Attach files to a message">
+  <img src="/images/multi-modal.gif" />
+</Frame>
 
 As a developer, you have the capability to access these attached files through the [cl.on_message](/api-reference/on-message) decorated function.
 
