--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -33,5 +33,5 @@ multi_modal = true
 # Allows user to use speech to text
 [features.speech_to_text]
     enabled = false
-    # language = en-US
+    # language = "en-US"
 ```
