add cookbook integrations examples

--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -30,7 +30,7 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
 
 <CardGroup cols={2}>
   <Card
-  title="LangChain Integration"
+  title="LangChain"
   icon="circle"
   color="#ea5a0c"
   href="/integrations/langchain">
@@ -38,7 +38,25 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
   </Card>
 
 <Card
-  title="Llama Index Integration"
+  title="Autogen"
+  icon="circle"
+  color="#F80061"
+  href="https://github.com/Chainlit/cookbook/tree/main/pyautogen"
+>
+  Learn how to integrate your Autogen agents with Chainlit.
+</Card>
+
+<Card
+  title="OpenAI Assistant"
+  icon="circle"
+  color="#dc2626"
+  href="https://github.com/Chainlit/cookbook/tree/main/openai-assistant"
+>
+  Learn how to integrate your OpenAI Assistants with Chainlit.
+</Card>
+
+<Card
+  title="Llama Index"
   icon="circle"
   color="#0285c7"
   href="/integrations/llama-index"
@@ -47,21 +65,12 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
 </Card>
 
 <Card
-  title="Haystack Integration"
+  title="Haystack"
   icon="circle"
   color="#16a34a"
   href="/integrations/haystack"
 >
   Learn how to integrate your Haystack code with Chainlit.
-</Card>
-
-<Card
-  title="Langflow Integration"
-  icon="circle"
-  color="#dc2626"
-  href="/integrations/langflow"
->
-  Learn how to integrate your Langflow agent with Chainlit.
 </Card>
 
 </CardGroup>
