add custom frontend

--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -74,3 +74,16 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
 </Card>
 
 </CardGroup>
+
+## Custom frontend
+
+Chainlit comes with a ChatGPT like frontend that you can use out of the box. However, you can also build your own frontend and use Chainlit as a backend.
+
+<Card
+  title="Custom frontend"
+  icon="circle"
+  color="#F80061"
+  href="https://github.com/Chainlit/cookbook/tree/main/custom-frontend"
+>
+  Learn how to integrate your custom frontend with the Chainlit backend.
+</Card>
