AZURE_OPENAI_API_KEY default value

--- a/observability-iteration/prompt-playground/llm-providers.mdx
+++ b/observability-iteration/prompt-playground/llm-providers.mdx
@@ -37,6 +37,7 @@ AZURE_OPENAI_DEPLOYMENT_NAME= # something like gpt-35-turbo
 Optional environment variables:
 
 ```shell
+AZURE_OPENAI_API_KEY="" # AZURE_OPENAI_API_KEY is mandatory so you can't set it to None, but you can set it to an empty string
 AZURE_AD_TOKEN=
 AZURE_AD_TOKEN_PROVIDER=
 AZURE_DEPLOYMENT=
