add link to cookbook example

--- a/ui-customisation/custom-logo-and-favicon.mdx
+++ b/ui-customisation/custom-logo-and-favicon.mdx
@@ -8,6 +8,16 @@ You can customize the Chainlit application with your own logo and favicon.
 
 Chainlit Application offers support for both dark and light modes. To accommodate this, prepare two versions of your logo, named `logo_dark` and `logo_light`. Place these logos in a `/public` folder next to your application. Once you restart the application, your custom logos should be displayed accordingly.
 
+<Card
+  title="Custom Logo Example"
+  color="#08947c"
+  icon="pied-piper-alt"
+  href="https://github.com/Chainlit/cookbook/tree/main/custom-logo
+"
+>
+  Practical example of how to use custom logos in your Chainlit application.
+</Card>
+
 ## Use your Favicon
 
 To further enhance branding, you can also update the application's favicon. Place an image file named `favicon` in the `public` folder next to your application. After restarting the application, the new favicon will take effect.
