--- a/ui-customisation/custom-logo-and-favicon.mdx
+++ b/ui-customisation/custom-logo-and-favicon.mdx
@@ -4,6 +4,11 @@ title: Custom Logo and Favicon
 
 You can customize the Chainlit application with your own logo and favicon.
 
+<Warning>
+  Assets such as favicons and logos are cached by default by your browser. You
+  might have to clear your browser cache to see the changes.
+</Warning>
+
 ## Use your Logo
 
 Chainlit Application offers support for both dark and light modes. To accommodate this, prepare two versions of your logo, named `logo_dark` and `logo_light`. Place these logos in a `/public` folder next to your application. Once you restart the application, your custom logos should be displayed accordingly.
