--- a/authentication/overview.mdx
+++ b/authentication/overview.mdx
@@ -6,7 +6,7 @@ When you create a Chainlit app, you can choose to enable authentication. This wi
 
 The authentication system is flexible with callbacks. This enables you to adapt the authentication to your needs.
 
-Each Chainlit app has an independant authentication system. It has nothing to do with Chainlit cloud authentication.
+Each Chainlit app has an independent authentication system. It has nothing to do with Chainlit cloud authentication.
 
 ## Configuration
 
