--- a/get-started/deployment.mdx
+++ b/get-started/deployment.mdx
@@ -25,3 +25,4 @@ After you've successfully set up and tested your Chainlit application locally, t
 - on [Replit](https://replit.com/@DanConstantini/Build-a-Chatbot-with-OpenAI-LangChain-and-Chainlit?v=1)
 - on [Render](https://discord.com/channels/1088038867602526210/1126834266504966294/1126845898287230977)
 - on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
+- on [HuggingFace Spaces](https://github.com/Chainlit/cookbook/tree/a2a91d1218f44d9498c965cea6909a380957edc0/chroma-qa-chat)
