--- a/ui-customisation/custom-logo-and-favicon.mdx
+++ b/ui-customisation/custom-logo-and-favicon.mdx
@@ -17,8 +17,7 @@ Chainlit Application offers support for both dark and light modes. To accommodat
   title="Custom Logo Example"
   color="#08947c"
   icon="pied-piper-alt"
-  href="https://github.com/Chainlit/cookbook/tree/main/custom-logo
-"
+  href="https://github.com/Chainlit/cookbook/tree/main/custom-logo"
 >
   Practical example of how to use custom logos in your Chainlit application.
 </Card>
