--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -67,6 +67,10 @@ docker tag chainlit/chainlit-cloud:latest <aws_account_id>.dkr.ecr.<region>.ama
 docker push <aws_account_id>.dkr.ecr.<region>.amazonaws.com/chainlit/chainlit-cloud:latest
 ```
 
+### Azure Container Registry
+
+Contact us here for Azure https://forms.gle/uyKyZmmpVET95Wbx8
+
 ## Run the application
 
 1. Once your image is accessible you can then host the application using the service of your choice.
@@ -173,6 +177,7 @@ In order to be able to use the storage solution of your choice, you will need to
 
 - For [AWS S3](https://repost.aws/knowledge-center/s3-configure-cors)
 - For [Google Cloud Storage](https://saturncloud.io/blog/how-to-set-up-cors-on-google-cloud-storage/)
+- For [Azure Blob Storage](https://learn.microsoft.com/en-us/rest/api/storageservices/cross-origin-resource-sharing--cors--support-for-the-azure-storage-services)
 
 ## Configure OAuth providers
 
