feat/update Azure blob storage documentation

--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -109,6 +109,9 @@ APP_GCS_PROJECT_ID="project id"
 APP_GCS_CLIENT_EMAIL="client email"
 # note: the private key needs to be encoded in base64
 APP_GCS_PRIVATE_KEY="private key"
+# Or for Azure storage https://learn.microsoft.com/en-us/azure/storage/blobs/quickstart-storage-explorer
+APP_AZURE_STORAGE_ACCOUNT="azure storage account"
+APP_AZURE_STORAGE_ACCESS_KEY="azure storage key"
 ```
 
 3. [OPTIONAL] Setup Redis to reduce latency:
